sub header overflow fix

--- a/app/assets/application.css
+++ b/app/assets/application.css
@@ -183,7 +183,7 @@ header .header-wrapper { display: table-cell; text-align: center; vertical-align
 
 .about-header { background-image: url("i_about2.jpeg"); }
 
-.sub-header { height: 20vh; display: -webkit-box; display: -webkit-flex; display: -moz-box; display: -ms-flexbox; display: flex; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-box-align: center; -webkit-align-items: center; -moz-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -webkit-justify-content: center; -moz-box-pack: center; -ms-flex-pack: center; justify-content: center; margin-bottom: 50px; }
+.sub-header { height: 20vh; min-height: 200px; display: -webkit-box; display: -webkit-flex; display: -moz-box; display: -ms-flexbox; display: flex; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-box-align: center; -webkit-align-items: center; -moz-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -webkit-justify-content: center; -moz-box-pack: center; -ms-flex-pack: center; justify-content: center; margin-bottom: 50px; }
 
 @media (max-width: 680px) { .sub-header { -webkit-transition: height 999999s ease; -o-transition: height 999999s ease; -moz-transition: height 999999s ease; transition: height 999999s ease; } }
 
