--- a/app/sass/layout/_header.scss
+++ b/app/sass/layout/_header.scss
@@ -60,6 +60,7 @@ header {
 
 .sub-header {
 	height: 20vh;
+	min-height: 200px;
 	display: flex;
 	flex-wrap: nowrap;
 	align-items: center;
